flarestyle.css
body {
  background-color: #FCFCFC;
  overflow:overlay;
}

.body::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.body {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

/* custom scrollbar */
::-webkit-scrollbar {
  width: 20px;
}

::-webkit-scrollbar-track {
  background-color: black;
}

::-webkit-scrollbar-thumb {
  background-color: #898989;
  border-radius: 20px;
  border: 6px solid transparent;
  background-clip: content-box;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #ff6259;
}


#globalBackground{
  position: fixed;
  bottom: 0;
  right: 0;
  left: 0;
  top: -25%;
  z-index: -100;
}

#flarebg{
  min-width: 100%;
  min-height: 100%;
  max-width: 250%;
  max-height: 400%;
}

p{
  font-family: "Franklin Gothic Light";
  font-size: 20px;
}

.date {
  color:gray;
  text-align:center;
  font-size:18px;
  margin:-10px;
}

h1 {
  font-family: "Franklin Gothic Light";
  font-size: 40px;
  color: red;
}

h2 {
  font-family: "Franklin Gothic Medium";
  font-size: 30px;
  color: red;
}

.blogTitle {
  text-decoration:none;
}

.post h2 {
  text-align: center;
}

.centertext {
  text-align: center;
}

em{
  font-size: 20px;
}

figcaption{
  font-family: "Franklin Gothic Light";
  font-style: italic;
  color: #333333;
}

a:link {
  color:#484848;
  font-family: "Franklin Gothic Light";
  font-size: 20px;
}

a:visited {
  color:#484848;
  font-family: "Franklin Gothic Light";
  font-size: 20px;
}

a:hover {
  color:red;
  font-family: "Franklin Gothic Light";
  font-size: 20px;
}

a:active {
  color:red;
  font-family: "Franklin Gothic Light";
  font-size: 20px;
}

.imlink{
  text-decoration: none;
}

.logo {
  display: inline-block;
  position: absolute;
  tab-index: 1;
  margin-left: 0em;
  margin-right: auto;
  margin-bottom:2em; 
  top: 3vmin;
  left: 3vmin;
  width: 39vmin;
  height: 10vmin; 
  /*padding: 8px;*/
}

.topbar {
  display: fixed;
  height: 13vmin;
  overflow: hidden;
  /*padding: 16px;*/
  margin: -8px 0px 2em -8px;
}

.toparrow{
  display: inline-block;
  position: absolute;
  background: url("/res/uparrow.svg") no-repeat;
  background-size: contain;
  margin-left: 0em;
  margin-right: auto;
  margin-bottom:2.5em;
  transform:rotate(90deg);
  top:8vmin;
  left:40vmin;
  width:5vmin;
  height:5vmin;
}

.arttitle {
  display: inline-block;
  position: absolute;
  background: url("/res/arttitle.svg") no-repeat;
  background-size: contain;
  margin-left: 0em;
  margin-right: auto;
  margin-bottom:2em;
  top:8vmin;
  left:46vmin;
  height:5vmin;
  width:12vmin;
}

.blogtitle {
  display: inline-block;
  position: absolute;
  background: url("/res/blogtitle.svg") no-repeat;
  background-size: contain;
  margin-left: 0em;
  margin-right: auto;
  margin-bottom:2em;
  top:8vmin;
  left:46vmin;
  height:5vmin;
  width:19vmin;
}

.linkstitle {
  display: inline-block;
  position: absolute;
  background: url("/res/linkstitle.svg") no-repeat;
  background-size: contain;
  margin-left: 0em;
  margin-right: auto;
  margin-bottom:2em;
  top:8vmin;
  left:46vmin;
  height:5vmin;
  width:19vmin;
}

.projectstitle {
  display: inline-block;
  position: absolute;
  background: url("/res/projectstitle.svg") no-repeat;
  background-size: contain;
  margin-left: 0em;
  margin-right: auto;
  margin-bottom:2em;
  top:8vmin;
  left:46vmin;
  height:5vmin;
  width:32vmin;
}

.newsbar {
  display: block;
  background: black;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: hidden;
  height: 30px;
  position: absolute;
  word-break: break-all;
  line-height: 30px;
    -moz-user-select: -moz-none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -o-user-select: none;
    user-select: none;
}

#scrollText {
  display: inline;
  color: white;
  margin: 0.5px;
  width: fit-content;
}

#fetchText {
  display: inline;
  color: white;
  margin: 3px;
  width: fit-content;
  position: absolute;
}

.togglebutton {
  background: url("/res/uparrowred.svg") no-repeat;
  filter: saturate(0)brightness(0);
  background-size: 75%;
  background-position: center;
  background-color: ;
  display: block;
  z-index: 99;
  position: absolute;
  width: 35px;
  height: 35px;
  right:12px;
  bottom: 0px;
}

.togglebutton:hover {
  filter: saturate(1);
  background-size: 75%;
  background-position: center;
  cursor: pointer;
}

.linkimage {
  display: inline-block;
  width: auto;
  height: 15vmin; 
  margin: 2em;
}

.topcover {
  position: relative;
  min-height: 100vh;
  height: 100%;
  box-sizing: border-box;
  overflow-x: hidden;
  overflow-y: hidden;
  background-color: transparent;
  margin: -8px;
}

.about {
  background-color: #cf0d1b;
  margin-left: -8px;
  margin-right: -8px;
  margin-top: 8px;
  margin-bottom: -8px;
  top: 0;
}

.about p {
  color: #ffe0e0;
}

.about h1 {
  color: white;
}

.about h2 {
  color: white;
}

.about a:link {
  color: white;
}

.about a:visited {
  color: white;
}

/* Tiles for links page */

.newgrounds {
  display: inline-block;
  background: url("/res/newgroundsblack.png") no-repeat;
  background-size: contain;
  width: 55vmin;
  height: 15vmin; 
  margin: 2em;
}

.newgrounds:hover {
  background: url("/res/newgrounds.png") no-repeat;
  background-size: contain;
}

.youtube {
  display: inline-block;
  background: url("/res/youtubeblack.png") no-repeat;
  background-size: contain;
  width: 55vmin;
  height: 15vmin; 
  margin: 2em;
}

.youtube:hover {
  background: url("/res/youtube.png") no-repeat;
  background-size: contain;
}

.twitter {
  display: inline-block;
  background: url("/res/twitterblack.png") no-repeat;
  background-size: contain;
  width: 55vmin;
  height: 15vmin; 
  margin: 2em;
}

.twitter:hover {
  background: url("/res/twitter.png") no-repeat;
  background-size: contain;
}

.twitch {
  display: inline-block;
  background: url("/res/twitchblack.png") no-repeat;
  background-size: contain;
  width: 55vmin;
  height: 15vmin; 
  margin: 2em;
}
/* ... */

